<resources>
    <string name="app_name">Cool Weather APP</string>
    <string name="buttonUpdate">Update</string>
    <string name="textLatitude">Latitude</string>
    <string name="textLongitude">Longitude</string>
    <string name="textSeaLevelPressure">Sea Level Pressure</string>
    <string name="textWindDirection">Wind Direction</string>
    <string name="textWindSpeed">Wind Speed</string>
    <string name="textTemperature">Temperature</string>
    <string name="textTime">Time</string>
    <string name="textPressure">Pressure</string>

</resources>