<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar2"
        android:layout_width="380dp"
        android:layout_height="420dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="191dp"
        android:layout_marginEnd="57dp"
        android:background="#5400BCD4"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="34dp"
        android:backgroundTint="#5A00BCD4"
        android:text="@string/buttonUpdate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/label_background"
        android:text="@string/textLatitude"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar2"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/label_background"
        android:text="@string/textLongitude"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar2"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="152dp"
        android:background="@drawable/label_background"
        android:text="@string/textSeaLevelPressure"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar2"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/label_background"
        android:text="@string/textWindDirection"
        android:textColor="#F8F8F8"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar2"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar2" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="252dp"
        android:background="@drawable/label_background"
        android:text="@string/textWindSpeed"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar2"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar2" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="316dp"
        android:background="@drawable/label_background"
        android:text="@string/textTemperature"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar2"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar2" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="364dp"
        android:background="@drawable/label_background"
        android:text="@string/textTime"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar2"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar2" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:layout_marginTop="316dp"
        android:background="@drawable/label_background"
        android:text="@string/textTemperature"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar2"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar2" />

    <TextView
        android:id="@+id/windDir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/label_background"
        android:text="@string/textWindDirection"
        android:textColor="#F8F8F8"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar2"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar2" />

    <TextView
        android:id="@+id/windSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:layout_marginTop="252dp"
        android:background="@drawable/label_background"
        android:text="@string/textWindSpeed"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar2"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar2" />

    <TextView
        android:id="@+id/Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:layout_marginTop="364dp"
        android:background="@drawable/label_background"
        android:text="@string/textTime"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar2"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar2" />

    <TextView
        android:id="@+id/pressureValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:layout_marginTop="152dp"
        android:background="@drawable/label_background"
        android:text="@string/textPressure"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar2"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar2" />

    <EditText
        android:id="@+id/editLatitude"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/label_background"
        android:hint="Enter Latitude"
        android:inputType="numberDecimal|numberSigned"
        android:padding="12dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#CCCCCC"
        app:layout_constraintEnd_toEndOf="@+id/materialToolbar2"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar2" />

    <EditText
        android:id="@+id/editLongitude"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/label_background"
        android:hint="Enter Latitude"
        android:inputType="numberDecimal|numberSigned"
        android:padding="12dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#CCCCCC"
        app:layout_constraintEnd_toEndOf="@+id/materialToolbar2"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar2" />

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/clear_day" />


</androidx.constraintlayout.widget.ConstraintLayout>